Some fonts were modified with Google Fonts and the alignment of the text in the first section was slightly corrected.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300;400;700&family=Bungee+Hairline&family=Comfortaa:wght@300;400&family=Flamenco:wght@300;400&family=Gruppo&family=Major+Mono+Display&family=Megrim&family=Nixie+One&family=Prosto+One&family=Zilla+Slab+Highlight:wght@400;700&display=swap');
 /* Custom properties/variables  */
 :root {
     --main-white: #f0f0f0;
@@ -83,19 +83,25 @@
   }
   
   h1,
-  h2 {
-    font-family: 'Raleway', 'Montserrat', 'Open Sans', sans-serif;
-    font-weight: 700;
+  h2,
+  .contact-section-header > p 
+    {
+    /*font-family: 'Raleway', 'Montserrat', 'Open Sans', sans-serif;*/
+    font-family: 'Zilla Slab Highlight', 'Bellota Text', 'Megrim', cursive;
     text-align: center;
   }
   
   h1 {
     font-size: 6.5rem;
     letter-spacing: 0.3rem;
+    font-weight: 700;
   }
   
   h2 {
-    font-size: 4.2rem;
+    font-size: 5rem;
+    letter-spacing: 0.3rem;
+    font-weight: 400;
+    color: black;
   }
   
   ul {
@@ -159,23 +165,49 @@
   /** Welcome section **/
   
   .welcome-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
     width: 100%;
     height: 100vh;
     background-color: #000;
     background-image: linear-gradient(60deg, #383c3f 0%, #151416 100%);
   }
   
+  /* .welcome-section .hello h1 {
+    display: flex; 
+    /*flex-direction: column; * /
+    justify-content: center; 
+    align-items: center;
+
+  }
+
+  .hello > h1 {
+    text-align: center;
+  } */
+
   .welcome-section > p {
     font-family:'Courier New', Courier, monospace;
     font-size: 3rem;
     font-weight: 600;
     /* font-style: italic; */
     color: var(--main-red);
+
+    text-align: center;
+    margin: 10px 10px;
   }
+
+  /* .flex-container{
+    display: flex;
+  }
+
+  .flex-container > div {
+    font-family:'Courier New', Courier, monospace;
+    font-size: 3rem;
+    font-weight: 600;
+    color: greenyellow;
+  } */
   
   /** Projects section **/
   
@@ -329,16 +361,20 @@
 
   .contact-section-header > p {
     /* font-family:'Courier New', Courier, monospace; */
-    font-family: 'Libre Barcode 128 Text', 'Raleway', 'Montserrat', 'Open Sans', sans-serif;
-
-    font-size: 8rem;
+    /* font-family: 'Libre Barcode 128 Text', 'Raleway', 'Montserrat', 'Open Sans', sans-serif; */
+    font-size: 5rem;
+    letter-spacing: 0.3rem;
     font-weight: 400;
+
+
+    /*font-size: 8rem;
+    font-weight: 400; */
     display: inline-block;
   }
   
   @media (max-width: 28.75em) {
     .contact-section-header > p {
-      font-size: 7rem;
+      font-size: 4.5rem;
     }
   }
   
